--- a/kontactplugin.desktop
+++ b/kontactplugin.desktop
@@ -5,6 +5,7 @@ Name=Kontact Plugin
 Name[ga]=Breiseán Kontact
 Name[gl]=Extensión de Kontact
 Name[nb]=Kontact-programtillegg
+Name[nds]=Kontact-Moduul
 Name[pt]='Plugin' do Kontact
 Name[pt_BR]=Plug-in do Kontact
 Name[sv]=Insticksprogram för Kontact
