--- a/kontactplugin.desktop
+++ b/kontactplugin.desktop
@@ -4,6 +4,7 @@ X-KDE-ServiceType=Kontact/Plugin
 Name=Kontact Plugin
 Name[en_GB]=Kontact Plugin
 Name[es]=Complemento de Kontact
+Name[et]=Kontacti plugin
 Name[ga]=Breiseán Kontact
 Name[gl]=Engadido de Kontact
 Name[nb]=Kontact-programtillegg
