--- a/kontactplugin.desktop
+++ b/kontactplugin.desktop
@@ -3,6 +3,7 @@ Type=ServiceType
 X-KDE-ServiceType=Kontact/Plugin
 Name=Kontact Plugin
 Name[cs]=Modul aplikace Kontact
+Name[da]=Kontact-plugin
 Name[en_GB]=Kontact Plugin
 Name[es]=Complemento de Kontact
 Name[et]=Kontacti plugin
