--- a/kontactplugin.desktop
+++ b/kontactplugin.desktop
@@ -8,6 +8,7 @@ Name[de]=Kontact-Modul
 Name[en_GB]=Kontact Plugin
 Name[es]=Complemento de Kontact
 Name[et]=Kontacti plugin
+Name[fr]=Module externe pour Kontact
 Name[ga]=Breiseán Kontact
 Name[gl]=Engadido de Kontact
 Name[nb]=Kontact-programtillegg
