--- a/kontactplugin.desktop
+++ b/kontactplugin.desktop
@@ -2,6 +2,7 @@
 Type=ServiceType
 X-KDE-ServiceType=Kontact/Plugin
 Name=Kontact Plugin
+Name[ca]=Connector pel Kontact
 Name[cs]=Modul aplikace Kontact
 Name[da]=Kontact-plugin
 Name[de]=Kontact-Modul
