--- a/kontactplugin.desktop
+++ b/kontactplugin.desktop
@@ -20,6 +20,7 @@ Name[sv]=Insticksprogram för Kontact
 Name[tr]=Kontact Eklentisi
 Name[uk]=Додаток до Kontact
 Name[x-test]=xxKontact Pluginxx
+Name[zh_CN]=Kontact 插件
 Name[zh_TW]=Kontact 外掛程式
 
 [PropertyDef::X-KDE-KontactPluginVersion]
