--- a/kontactplugin.desktop
+++ b/kontactplugin.desktop
@@ -16,6 +16,10 @@ Name[nb]=Kontact-programtillegg
 Name[nds]=Kontact-Moduul
 Name[pt]='Plugin' do Kontact
 Name[pt_BR]=Plug-in do Kontact
+Name[sr]=Прикључак за Контакт
+Name[sr@ijekavian]=Прикључак за Контакт
+Name[sr@ijekavianlatin]=Priključak za Kontact
+Name[sr@latin]=Priključak za Kontact
 Name[sv]=Insticksprogram för Kontact
 Name[tr]=Kontact Eklentisi
 Name[uk]=Додаток до Kontact
