--- a/kontactplugin.desktop
+++ b/kontactplugin.desktop
@@ -17,6 +17,7 @@ Name[it]=Plugin di Kontact
 Name[lv]=Kontact spraudnis
 Name[nb]=Kontact-programtillegg
 Name[nds]=Kontact-Moduul
+Name[nl]=Kontact-plugin
 Name[pt]='Plugin' do Kontact
 Name[pt_BR]=Plug-in do Kontact
 Name[sr]=Прикључак за Контакт
