--- a/kontactplugin.desktop
+++ b/kontactplugin.desktop
@@ -14,6 +14,7 @@ Name[fr]=Module externe pour Kontact
 Name[ga]=Breiseán Kontact
 Name[gl]=Engadido de Kontact
 Name[it]=Plugin di Kontact
+Name[ja]=Kontact プラグイン
 Name[lv]=Kontact spraudnis
 Name[nb]=Kontact-programtillegg
 Name[nds]=Kontact-Moduul
