--- a/kontactplugin.desktop
+++ b/kontactplugin.desktop
@@ -15,6 +15,7 @@ Name[ga]=Breiseán Kontact
 Name[gl]=Engadido de Kontact
 Name[it]=Plugin di Kontact
 Name[ja]=Kontact プラグイン
+Name[km]=កម្មវិធី​ជំនួយ Kontact
 Name[lv]=Kontact spraudnis
 Name[nb]=Kontact-programtillegg
 Name[nds]=Kontact-Moduul
