--- a/kontactplugin.desktop
+++ b/kontactplugin.desktop
@@ -22,6 +22,7 @@ Name[nds]=Kontact-Moduul
 Name[nl]=Kontact-plugin
 Name[pt]='Plugin' do Kontact
 Name[pt_BR]=Plug-in do Kontact
+Name[sl]=Vstavek za Kontact
 Name[sr]=Прикључак за Контакт
 Name[sr@ijekavian]=Прикључак за Контакт
 Name[sr@ijekavianlatin]=Priključak za Kontact
