--- a/kontactplugin.desktop
+++ b/kontactplugin.desktop
@@ -3,6 +3,7 @@ Type=ServiceType
 X-KDE-ServiceType=Kontact/Plugin
 Name=Kontact Plugin
 Name[ca]=Connector pel Kontact
+Name[ca@valencia]=Connector pel Kontact
 Name[cs]=Modul aplikace Kontact
 Name[da]=Kontact-plugin
 Name[de]=Kontact-Modul
@@ -12,11 +13,17 @@ Name[et]=Kontacti plugin
 Name[fr]=Module externe pour Kontact
 Name[ga]=Breiseán Kontact
 Name[gl]=Engadido de Kontact
+Name[it]=Plugin di Kontact
+Name[ja]=Kontact プラグイン
+Name[km]=កម្មវិធី​ជំនួយ Kontact
 Name[lv]=Kontact spraudnis
 Name[nb]=Kontact-programtillegg
 Name[nds]=Kontact-Moduul
+Name[nl]=Kontact-plugin
+Name[pa]=ਕੇਸੰਪਰਕ ਪਲੱਗਇਨ
 Name[pt]='Plugin' do Kontact
 Name[pt_BR]=Plug-in do Kontact
+Name[sl]=Vstavek za Kontact
 Name[sr]=Прикључак за Контакт
 Name[sr@ijekavian]=Прикључак за Контакт
 Name[sr@ijekavianlatin]=Priključak za Kontact
