--- a/kontactplugin.desktop
+++ b/kontactplugin.desktop
@@ -17,6 +17,7 @@ Name[gl]=Engadido de Kontact
 Name[it]=Plugin di Kontact
 Name[ja]=Kontact プラグイン
 Name[km]=កម្មវិធី​ជំនួយ Kontact
+Name[lt]=Kontact priedas
 Name[lv]=Kontact spraudnis
 Name[nb]=Kontact-programtillegg
 Name[nds]=Kontact-Moduul
