--- a/kontactplugin.desktop
+++ b/kontactplugin.desktop
@@ -23,6 +23,7 @@ Name[lv]=Kontact spraudnis
 Name[nb]=Kontact-programtillegg
 Name[nds]=Kontact-Moduul
 Name[nl]=Kontact-plugin
+Name[nn]=Kontakt-tillegg
 Name[pa]=ਕੇਸੰਪਰਕ ਪਲੱਗਇਨ
 Name[pt]='Plugin' do Kontact
 Name[pt_BR]=Plug-in do Kontact
