--- a/kontactplugin.desktop
+++ b/kontactplugin.desktop
@@ -34,6 +34,7 @@ Name[sv]=Insticksprogram för Kontact
 Name[th]=ส่วนเสริมของ Kontact
 Name[tr]=Kontact Eklentisi
 Name[uk]=Додаток до Kontact
+Name[wa]=Tchôke divins di Kontact
 Name[x-test]=xxKontact Pluginxx
 Name[zh_CN]=Kontact 插件
 Name[zh_TW]=Kontact 外掛程式
