--- a/kontactplugin.desktop
+++ b/kontactplugin.desktop
@@ -18,6 +18,7 @@ Name[hu]=Kontact-modul
 Name[it]=Plugin di Kontact
 Name[ja]=Kontact プラグイン
 Name[km]=កម្មវិធី​ជំនួយ Kontact
+Name[lt]=Kontact priedas
 Name[lv]=Kontact spraudnis
 Name[nb]=Kontact-programtillegg
 Name[nds]=Kontact-Moduul
