--- a/kontactplugin.desktop
+++ b/kontactplugin.desktop
@@ -14,9 +14,12 @@ Name[fi]=Kontact-liitännäinen
 Name[fr]=Module externe pour Kontact
 Name[ga]=Breiseán Kontact
 Name[gl]=Engadido de Kontact
+Name[hu]=Kontact-modul
 Name[it]=Plugin di Kontact
 Name[ja]=Kontact プラグイン
+Name[kk]=Kontact плагині
 Name[km]=កម្មវិធី​ជំនួយ Kontact
+Name[lt]=Kontact priedas
 Name[lv]=Kontact spraudnis
 Name[nb]=Kontact-programtillegg
 Name[nds]=Kontact-Moduul
