--- a/kontactplugin.desktop
+++ b/kontactplugin.desktop
@@ -24,7 +24,7 @@ Name[lt]=Kontact priedas
 Name[lv]=Kontact spraudnis
 Name[nb]=Kontact-programtillegg
 Name[nds]=Kontact-Moduul
-Name[nl]=Kontact-plugin
+Name[nl]=Kontact-plug-in
 Name[nn]=Kontakt-tillegg
 Name[pa]=ਕੇਸੰਪਰਕ ਪਲੱਗਇਨ
 Name[pl]=Wtyczka Kontact
