SVN_SILENT made messages (.desktop file)

--- a/kontactplugin.desktop
+++ b/kontactplugin.desktop
@@ -16,6 +16,7 @@ Name[fr]=Module externe pour Kontact
 Name[ga]=Breiseán Kontact
 Name[gl]=Engadido de Kontact
 Name[hu]=Kontact-modul
+Name[ia]=Plug-in de Kontact 
 Name[it]=Plugin di Kontact
 Name[ja]=Kontact プラグイン
 Name[kk]=Kontact плагині
