SVN_SILENT made messages (.desktop file)

--- a/kontactplugin.desktop
+++ b/kontactplugin.desktop
@@ -15,6 +15,7 @@ Name[fi]=Kontact-liitännäinen
 Name[fr]=Module externe pour Kontact
 Name[ga]=Breiseán Kontact
 Name[gl]=Engadido de Kontact
+Name[he]=תוסף Kontact
 Name[hu]=Kontact-modul
 Name[ia]=Plug-in de Kontact 
 Name[it]=Plugin di Kontact
