SVN_SILENT made messages (.desktop file)

--- a/kontactplugin.desktop
+++ b/kontactplugin.desktop
@@ -31,7 +31,7 @@ Name[nn]=Kontakt-tillegg
 Name[pa]=ਕੇਸੰਪਰਕ ਪਲੱਗਇਨ
 Name[pl]=Wtyczka Kontact
 Name[pt]='Plugin' do Kontact
-Name[pt_BR]=Plug-in do Kontact
+Name[pt_BR]=Plugin do Kontact
 Name[ro]=Modul Kontact
 Name[ru]=Модуль Kontact
 Name[sl]=Vstavek za Kontact
