SVN_SILENT made messages (.desktop file)

--- a/kontactplugin.desktop
+++ b/kontactplugin.desktop
@@ -8,6 +8,7 @@ Name[ca@valencia]=Connector pel Kontact
 Name[cs]=Modul aplikace Kontact
 Name[da]=Kontact-plugin
 Name[de]=Kontact-Modul
+Name[el]=Πρόσθετο Kontact
 Name[en_GB]=Kontact Plugin
 Name[es]=Complemento de Kontact
 Name[et]=Kontacti plugin
