--- a/kontactplugin.desktop
+++ b/kontactplugin.desktop
@@ -35,6 +35,7 @@ Name[pt]='Plugin' do Kontact
 Name[pt_BR]=Plugin do Kontact
 Name[ro]=Modul Kontact
 Name[ru]=Модуль Kontact
+Name[sk]=Plugin Kontact
 Name[sl]=Vstavek za Kontact
 Name[sr]=Прикључак за Контакт
 Name[sr@ijekavian]=Прикључак за Контакт
