--- a/KF5KontactInterfaceConfig.cmake.in
+++ b/KF5KontactInterfaceConfig.cmake.in
@@ -1,5 +1,5 @@
 @PACKAGE_INIT@
-
+include(CMakeFindDependencyMacro)
 find_dependency(KF5Parts "@KF5_VERSION@")
 
 include("${CMAKE_CURRENT_LIST_DIR}/KF5KontactInterfaceTargets.cmake")
