--- a/KF5KontactInterfaceConfig.cmake.in
+++ b/KF5KontactInterfaceConfig.cmake.in
@@ -5,8 +5,12 @@ find_dependency(KF5Parts "@KF5_VERSION@")
 if(NOT CMAKE_VERSION VERSION_LESS "3.10.0")
   # CMake 3.9+ warns about automoc on files without Q_OBJECT, and doesn't know about other macros.
   # 3.10+ lets us provide more macro names that require automoc.
-  # Remove this when depending on a Frameworks or ECM version that solves this upstream.
-  list(APPEND CMAKE_AUTOMOC_MACRO_NAMES "K_PLUGIN_FACTORY_WITH_JSON" "K_PLUGIN_FACTORY" "EXPORT_KONTACT_PLUGIN")
+  # KF5 >= 5.42 takes care itself of adding its macros in its cmake config files
+  if (KF5_VERSION VERSION_LESS "5.42.0")
+     list(APPEND CMAKE_AUTOMOC_MACRO_NAMES "K_PLUGIN_FACTORY_WITH_JSON" "K_PLUGIN_FACTORY" "EXPORT_KONTACT_PLUGIN")
+  else()
+     list(APPEND CMAKE_AUTOMOC_MACRO_NAMES "EXPORT_KONTACT_PLUGIN")
+  endif()
 endif()
 
 include("${CMAKE_CURRENT_LIST_DIR}/KF5KontactInterfaceTargets.cmake")
