Fix kf5 lib with old CMake version

--- a/KF5KontactInterfaceConfig.cmake.in
+++ b/KF5KontactInterfaceConfig.cmake.in
@@ -1,6 +1,6 @@
 @PACKAGE_INIT@
 include(CMakeFindDependencyMacro)
-find_dependency(KF5Parts "@KF5_VERSION@")
+find_dependency(KF5Parts "@KF5_MIN_VERSION@")
 
 if(NOT CMAKE_VERSION VERSION_LESS "3.10.0")
   # CMake 3.9+ warns about automoc on files without Q_OBJECT, and doesn't know about other macros.
