--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,7 +81,11 @@ add_definitions(-DQT_NO_FOREACH)
 
 add_subdirectory(src)
 
-install( FILES kontactinterface.renamecategories kontactinterface.categories DESTINATION ${KDE_INSTALL_CONFDIR} )
+if (${ECM_VERSION} STRGREATER "5.58.0")
+    install(FILES kontactinterface.renamecategories kontactinterface.categories  DESTINATION  ${KDE_INSTALL_LOGGINGCATEGORIESDIR})
+else()
+    install(FILES kontactinterface.renamecategories kontactinterface.categories  DESTINATION ${KDE_INSTALL_CONFDIR})
+endif()
 
 
 feature_summary(WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
