--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,5 +107,6 @@ add_subdirectory(src)
 
 
 kde_configure_git_pre_commit_hook(CHECKS CLANG_FORMAT)
+ki18n_install(po)
 feature_summary(WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
 
