--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,7 +92,10 @@ install(FILES
 
 install(EXPORT KF5KontactInterfaceTargets DESTINATION "${CMAKECONFIG_INSTALL_DIR}" FILE KF5KontactInterfaceTargets.cmake NAMESPACE KF5::)
 
-ecm_set_disabled_deprecation_versions(QT 5.15.2 KF 5.76.0)
+ecm_set_disabled_deprecation_versions(QT 5.15.2
+    KF 5.91.0
+    KPARTS 5.76 # componentData()
+)
 
 
 option(USE_UNITY_CMAKE_SUPPORT "Use UNITY cmake support (speedup compile time)" OFF)
