--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -10,3 +10,6 @@ Dependencies:
     'frameworks/kwindowsystem': '@latest'
     'frameworks/ki18n': '@latest'
     'frameworks/kxmlgui': '@latest'
+
+Options:
+  require-passing-tests-on: [ 'Linux', 'FreeBSD', 'Windows' ]      
