Fix and simplify X11 startup id handling
Create a new startup id instead of trying to read an existing one, which doesn't work

Use KWindowSystem::activateWindow to activate the window instead of doing it implicitly via KStartupInfo::setNewStartupId

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,8 +60,11 @@ find_package(KF5 ${KF5_MIN_VERSION} REQUIRED COMPONENTS
     XmlGui
 )
 
-if (NOT APPLE)
-    find_package(X11)
+if (NOT APPLE AND NOT WIN32)
+    find_package(X11 REQUIRED)
+    if (QT_MAJOR_VERSION STREQUAL "5")
+        find_package(Qt5X11Extras REQUIRED)
+    endif()
 endif()
 
 set(KONTACTINTERFACE_HAVE_X11 ${X11_FOUND})
