Clean up .gitlab/.kde-ci + change to KF6/KPim6

--- a/metainfo.yaml
+++ b/metainfo.yaml
@@ -9,7 +9,7 @@ deprecated: false
 release: false
 libraries:
  - qmake: KontactInterface
-   cmake: "KF5::KontactInterface"
-cmakename: KF5KontactInterface
+   cmake: "KPim6::KontactInterface"
+cmakename: KPim6KontactInterface
 group: kdepim
 public_lib: true
