--- a/KPimKontactInterfaceConfig.cmake.in
+++ b/KPimKontactInterfaceConfig.cmake.in
@@ -3,9 +3,9 @@
 
 @PACKAGE_INIT@
 include(CMakeFindDependencyMacro)
-find_dependency(KF@KF_MAJOR_VERSION@Parts "@KF_MIN_VERSION@")
+find_dependency(KF6Parts "@KF_MIN_VERSION@")
 
 @PACKAGE_SETUP_AUTOMOC_VARIABLES@
 
-include("${CMAKE_CURRENT_LIST_DIR}/KPim@KF_MAJOR_VERSION@KontactInterfaceTargets.cmake")
+include("${CMAKE_CURRENT_LIST_DIR}/KPim6KontactInterfaceTargets.cmake")
 @PACKAGE_INCLUDE_QCHTARGETS@
