--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,10 @@
 # SPDX-FileCopyrightText: none
 # SPDX-License-Identifier: BSD-3-Clause
 
-add_library(KPim${KF_MAJOR_VERSION}KontactInterface)
-add_library(KPim${KF_MAJOR_VERSION}::KontactInterface ALIAS KPim${KF_MAJOR_VERSION}KontactInterface)
+add_library(KPim6KontactInterface)
+add_library(KPim6::KontactInterface ALIAS KPim6KontactInterface)
 
-target_sources(KPim${KF_MAJOR_VERSION}KontactInterface PRIVATE
+target_sources(KPim6KontactInterface PRIVATE
     core.cpp
     plugin.cpp
     summary.cpp
@@ -18,46 +18,46 @@ target_sources(KPim${KF_MAJOR_VERSION}KontactInterface PRIVATE
     pimuniqueapplication.h
     summary.h)
 
-ecm_qt_declare_logging_category(KPim${KF_MAJOR_VERSION}KontactInterface HEADER kontactinterface_debug.h IDENTIFIER KONTACTINTERFACE_LOG CATEGORY_NAME org.kde.pim.kontactinterface
+ecm_qt_declare_logging_category(KPim6KontactInterface HEADER kontactinterface_debug.h IDENTIFIER KONTACTINTERFACE_LOG CATEGORY_NAME org.kde.pim.kontactinterface
         OLD_CATEGORY_NAMES log_kontactinterface
         DESCRIPTION "kontactinterface (pim lib)" EXPORT KONTACTINTERFACE)
 
 if (COMPILE_WITH_UNITY_CMAKE_SUPPORT)
-    set_target_properties(KPim${KF_MAJOR_VERSION}KontactInterface PROPERTIES UNITY_BUILD ON)
+    set_target_properties(KPim6KontactInterface PROPERTIES UNITY_BUILD ON)
 endif()
 
-generate_export_header(KPim${KF_MAJOR_VERSION}KontactInterface BASE_NAME kontactinterface)
+generate_export_header(KPim6KontactInterface BASE_NAME kontactinterface)
 
-target_include_directories(KPim${KF_MAJOR_VERSION}KontactInterface INTERFACE "$<INSTALL_INTERFACE:${KDE_INSTALL_INCLUDEDIR}/KPim${KF_MAJOR_VERSION}/KontactInterface>")
-target_include_directories(KPim${KF_MAJOR_VERSION}KontactInterface PUBLIC "$<BUILD_INTERFACE:${KontactInterface_SOURCE_DIR}/src;${KontactInterface_BINARY_DIR}/src;${KontactInterface_BINARY_DIR}>")
+target_include_directories(KPim6KontactInterface INTERFACE "$<INSTALL_INTERFACE:${KDE_INSTALL_INCLUDEDIR}/KPim6/KontactInterface>")
+target_include_directories(KPim6KontactInterface PUBLIC "$<BUILD_INTERFACE:${KontactInterface_SOURCE_DIR}/src;${KontactInterface_BINARY_DIR}/src;${KontactInterface_BINARY_DIR}>")
 
-target_link_libraries(KPim${KF_MAJOR_VERSION}KontactInterface
+target_link_libraries(KPim6KontactInterface
                      PUBLIC
-                      KF${KF_MAJOR_VERSION}::CoreAddons
-                      KF${KF_MAJOR_VERSION}::Parts
-                      KF${KF_MAJOR_VERSION}::XmlGui
+                      KF6::CoreAddons
+                      KF6::Parts
+                      KF6::XmlGui
                      PRIVATE
-                      KF${KF_MAJOR_VERSION}::WindowSystem
-                      KF${KF_MAJOR_VERSION}::I18n
-                      KF${KF_MAJOR_VERSION}::KIOGui
+                      KF6::WindowSystem
+                      KF6::I18n
+                      KF6::KIOGui
 )
 
 if (KONTACTINTERFACE_HAVE_X11)
     if (QT_MAJOR_VERSION STREQUAL "5")
-        target_link_libraries(KPim${KF_MAJOR_VERSION}KontactInterface PRIVATE Qt::X11Extras)
+        target_link_libraries(KPim6KontactInterface PRIVATE Qt::X11Extras)
     else()
-        target_link_libraries(KPim${KF_MAJOR_VERSION}KontactInterface PRIVATE Qt::GuiPrivate)
+        target_link_libraries(KPim6KontactInterface PRIVATE Qt::GuiPrivate)
     endif()
 endif()
 
-set_target_properties(KPim${KF_MAJOR_VERSION}KontactInterface PROPERTIES
+set_target_properties(KPim6KontactInterface PROPERTIES
     VERSION ${KONTACTINTERFACE_VERSION}
     SOVERSION ${KONTACTINTERFACE_SOVERSION}
     EXPORT_NAME KontactInterface
 )
 
 
-install(TARGETS KPim${KF_MAJOR_VERSION}KontactInterface EXPORT KPim${KF_MAJOR_VERSION}KontactInterfaceTargets ${KDE_INSTALL_TARGETS_DEFAULT_ARGS})
+install(TARGETS KPim6KontactInterface EXPORT KPim6KontactInterfaceTargets ${KDE_INSTALL_TARGETS_DEFAULT_ARGS})
 
 ########### install files ###############
 
@@ -76,27 +76,27 @@ ecm_generate_headers(KontactInterface_CamelCase_HEADERS
 install(FILES
   ${CMAKE_CURRENT_BINARY_DIR}/kontactinterface_export.h
   ${KontactInterface_HEADERS}
-  DESTINATION ${KDE_INSTALL_INCLUDEDIR}/KPim${KF_MAJOR_VERSION}/KontactInterface/kontactinterface
+  DESTINATION ${KDE_INSTALL_INCLUDEDIR}/KPim6/KontactInterface/kontactinterface
   COMPONENT Devel
 )
 
 install(FILES
     ${KontactInterface_CamelCase_HEADERS}
-    DESTINATION ${KDE_INSTALL_INCLUDEDIR}/KPim${KF_MAJOR_VERSION}/KontactInterface/KontactInterface/
+    DESTINATION ${KDE_INSTALL_INCLUDEDIR}/KPim6/KontactInterface/KontactInterface/
     COMPONENT Devel
 )
 
-ecm_generate_pri_file(BASE_NAME KontactInterface LIB_NAME KPim${KF_MAJOR_VERSION}KontactInterface DEPS "KParts KCoreAddons KXmlGui"
-    FILENAME_VAR PRI_FILENAME INCLUDE_INSTALL_DIR ${KDE_INSTALL_INCLUDEDIR}/KPim${KF_MAJOR_VERSION}/KontactInterface)
+ecm_generate_pri_file(BASE_NAME KontactInterface LIB_NAME KPim6KontactInterface DEPS "KParts KCoreAddons KXmlGui"
+    FILENAME_VAR PRI_FILENAME INCLUDE_INSTALL_DIR ${KDE_INSTALL_INCLUDEDIR}/KPim6/KontactInterface)
 install(FILES ${PRI_FILENAME} DESTINATION ${ECM_MKSPECS_INSTALL_DIR})
 
 ecm_qt_install_logging_categories(EXPORT KONTACTINTERFACE FILE kontactinterface.categories DESTINATION ${KDE_INSTALL_LOGGINGCATEGORIESDIR})
 
 if (BUILD_QCH)
     ecm_add_qch(
-        KPim${KF_MAJOR_VERSION}KontactInterface_QCH
-        NAME KPim${KF_MAJOR_VERSION}KontactInterface
-        BASE_NAME KPim${KF_MAJOR_VERSION}KontactInterface
+        KPim6KontactInterface_QCH
+        NAME KPim6KontactInterface
+        BASE_NAME KPim6KontactInterface
         VERSION ${PIM_VERSION}
         ORG_DOMAIN org.kde
         SOURCES # using only public headers, to cover only public API
@@ -104,9 +104,9 @@ if (BUILD_QCH)
         #MD_MAINPAGE "${CMAKE_SOURCE_DIR}/README.md"
         #IMAGE_DIRS "${CMAKE_SOURCE_DIR}/docs/pics"
         LINK_QCHS
-            Qt${QT_MAJOR_VERSION}Core_QCH
-            Qt${QT_MAJOR_VERSION}Gui_QCH
-            Qt${QT_MAJOR_VERSION}Widgets_QCH
+            Qt6Core_QCH
+            Qt6Gui_QCH
+            Qt6Widgets_QCH
         INCLUDE_DIRS
             ${CMAKE_CURRENT_BINARY_DIR}
         BLANK_MACROS
