pri is not created now

--- a/metainfo.yaml
+++ b/metainfo.yaml
@@ -11,8 +11,7 @@ portingAid: false
 deprecated: false
 release: false
 libraries:
- - qmake: KontactInterface
-   cmake: "KPim6::KontactInterface"
+ - cmake: "KPim6::KontactInterface"
 cmakename: KPim6KontactInterface
 group: kdepim
 public_lib: true
