Find Qt6Gui before using Qt6Gui_VERSION
Amends f76b3d31e18db88d3b84ace6e83e15288a695152

(cherry picked from commit d45d14b36b4317034d11a2aef04986188c8b6a72)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,7 @@ ecm_setup_qtplugin_macro_names(
         PACKAGE_SETUP_AUTOMOC_VARIABLES
 )
 
+find_package(Qt6Gui ${QT_REQUIRED_VERSION} CONFIG REQUIRED)
 find_package(Qt6DBus ${QT_REQUIRED_VERSION} CONFIG REQUIRED)
 if (Qt6Gui_VERSION VERSION_GREATER_EQUAL "6.10.0")
    find_package(Qt6GuiPrivate ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE)
