Add lsan CI support

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -14,3 +14,4 @@ Dependencies:
 Options:
  require-passing-tests-on: ['Linux', 'FreeBSD', 'Windows']
  cmake-options: '-DWARNINGS_AS_ERRORS=ON'
+ enable-lsan: True
